--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,6 +11,7 @@
             <h1 class="text-center"> Login </h1>
             <p class="text-center lead">Faça login ou crie sua conta abaixo</p>
 
+            <%- include('./includes/messages') %> 
             <div class="row">
 
                 <div class="col-lg my-2">
