--- a/src/views/contacts.ejs
+++ b/src/views/contacts.ejs
@@ -12,7 +12,11 @@
 
                     <%- include('includes/messages') %>
 
-                        <form action="/contacts/register" method="POST">
+                        <% if(contact._id) {%> 
+                            <form action="/contacts/edit/<%= contact._id %>" method="POST">
+                        <% } else { %>
+                            <form action="/contacts/register" method="POST">
+                        <% } %>  
                             <input type="hidden" name="_csrf" value=<%=csrfToken %>>
                             <div class="mb-3">
                                 <label for="nameInput" class="form-label">Nome</label>
