Validação no Front-End - Cadastro e Registro/Edição de Contato
Criei os Arquivos Contact.js e Register.js, que são módulos, onde temos as classes Contact e Register , nelas se encontra o método validate que faz a validação do formulário (igual o que é realizado no backend, porém estamos poupando recursos), e a createError que cria um elemento(div) na página e mostra uma mensagem(que foi estilizada com a cor vermelha). No main importamos essas classes para usarmos.
Além disso, realizei uma pequena estilização no backgorund e no container da página, e no index.ejs adicionei uma condição que verifica se o usuário está logado para mostrar os contatos

--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -1,3 +1,42 @@
+:root{
+    --primary-color:#107d81;
+    --medium-gray-color: #C1CBD2;
+}
+
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    outline: none;
+    background-color: var(--primary-color);
+}
+
+.container{
+    max-width: 80%;
+    margin: 50px auto;
+    padding: 50px;
+    background-color: #EADEDA;
+    border-radius: 20px;
+    box-shadow: 10px 10px 5px gray;
+}
+
+table tr {
+    border: 0.05rem solid var(--medium-gray-color);
+    padding: 1rem;
+}
+
+.table-title{
+    background-color: rgb(202, 200, 200);
+    border: 0.1rem solid rgb(184, 184, 184);
+}
+
+.responsive-table{
+    overflow: hidden;
+    overflow-x: auto;
+}
+
 .error-text {
     color: red;
     margin: 0.5em 0;
