--- a/src/views/login-logado.ejs
+++ b/src/views/login-logado.ejs
@@ -9,7 +9,7 @@
         <div class="col-lg-8 my-4">
 
             <h1 class="text-center"> Olá <%= user.email %> </h1>
-            <p class="text-center lead">Hora de Trabalhar!</p>
+            <p class="text-center lead">Hora de Trabalhar! <a href="/">Veja seus Contatos</a></p>
 
             <%- include('./includes/messages') %> 
             
